--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -37,6 +37,13 @@
                 <category android:name="android.intent.category.BROWSABLE"/>
                 <data android:scheme="@string/google_auth_redirect_scheme"/>
             </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data android:scheme="@string/dwbn_auth_redirect_scheme"/>
+            </intent-filter>
         </activity>
 
         <!-- Main activity -->
